interfaces/C++/TACDev/TACDev.h

typedef unsigned long TAC_HANDLE;
typedef unsigned long TAC_ERROR;
typedef unsigned long TAC_RESULT;
	// Must be called before any other calls
	TACDEV_EXPORT TAC_RESULT InitializeTACDev();
	TACDEV_EXPORT TAC_RESULT GetAlpacaVersion(char* alpacaVersion, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetTACVersion(char* tacVersion, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetLastTACError(char* lastError, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetLoggingState(bool* loggingState);
	TACDEV_EXPORT TAC_RESULT SetLoggingState(bool loggingState);
	TACDEV_EXPORT TAC_RESULT GetDeviceCount(int* deviceCount);
	TACDEV_EXPORT unsigned long GetPortData(int deviceIndex, char* portData, int bufferSize);
	TACDEV_EXPORT TAC_HANDLE OpenHandleByDescription(const char* portName);
	TACDEV_EXPORT TAC_RESULT CloseTACHandle(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT GetName(TAC_HANDLE tacHandle, char* deviceName, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetFirmwareVersion(TAC_HANDLE tacHandle, char* firmwareVersion, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetHardware(TAC_HANDLE tacHandle, char* hardware, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetHardwareVersion(TAC_HANDLE tacHandle, char* hardwareVersion, int bufferSize);
	TACDEV_EXPORT TAC_RESULT GetUUID(TAC_HANDLE tacHandle, char* uuid, int bufferSize);
	TACDEV_EXPORT TAC_ERROR SetExternalPowerControl(TAC_HANDLE tacHandle, bool state);
	// dynamic commands
	TACDEV_EXPORT TAC_ERROR GetCommandCount(TAC_HANDLE tacHandle, unsigned long* commandCount);
	TACDEV_EXPORT TAC_ERROR GetCommand(TAC_HANDLE tacHandle, unsigned long commandIndex, char* commandBuffer, int bufferSize);
	// This command is the root of all others
	TACDEV_EXPORT TAC_ERROR GetCommandState(TAC_HANDLE tacHandle, const char* command, bool* state);
	TACDEV_EXPORT TAC_ERROR SendCommand(TAC_HANDLE tacHandle, const char* command, bool state);
	// Help
	TACDEV_EXPORT TAC_ERROR GetHelpText(TAC_HANDLE tacHandle, char* helpBuffer, int bufferSize, int* actualSize);
	// Raw Pin State
	TACDEV_EXPORT TAC_ERROR SetPinState(TAC_HANDLE tacHandle, int pin, bool state);
	TACDEV_EXPORT TAC_RESULT SetBatteryState(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetBatteryState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT Usb0(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetUsb0State(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT SetName(TAC_HANDLE tacHandle, const char* newName);